loopfor.LoopCourseForest.scala.error
Compilation error:
LoopCourseForest:7: error: not found: value setColorBrush
setColorBrush(Color.green)
^